# crime-web

./: .dockerignore  Dockerfile  README.md  pyproject.toml
deploy/k8s/: 10-crime-web.yaml  20-crime-data.yaml
src/crimeweb/: db.py  ingest.py  server.py  socrata.py  ui.py
src/crimeweb/static/: app.css
